[gd_scene load_steps=65 format=2]

[ext_resource path="res://Battlemage Fantasy Character/NecromancerSprites/Skeletons/Skeleton Warrior.necromancer.png" type="Texture" id=1]
[ext_resource path="res://InstanceScripts/Necromancer.gd" type="Script" id=3]
[ext_resource path="res://Scenes/flash.shader" type="Shader" id=4]
[ext_resource path="res://Random_Effects/Sangoro/EXPLOSION.png" type="Texture" id=5]

[sub_resource type="ShaderMaterial" id=283]
resource_local_to_scene = true
shader = ExtResource( 4 )
shader_param/flash_color = Color( 1, 1, 1, 1 )
shader_param/flash_modifier = 0.0

[sub_resource type="AtlasTexture" id=304]
atlas = ExtResource( 1 )
region = Rect2( 0, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=305]
atlas = ExtResource( 1 )
region = Rect2( 48, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=306]
atlas = ExtResource( 1 )
region = Rect2( 96, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=307]
atlas = ExtResource( 1 )
region = Rect2( 144, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=308]
atlas = ExtResource( 1 )
region = Rect2( 192, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=309]
atlas = ExtResource( 1 )
region = Rect2( 240, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=310]
atlas = ExtResource( 1 )
region = Rect2( 288, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=311]
atlas = ExtResource( 1 )
region = Rect2( 336, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=312]
atlas = ExtResource( 1 )
region = Rect2( 384, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=313]
atlas = ExtResource( 1 )
region = Rect2( 432, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=314]
atlas = ExtResource( 1 )
region = Rect2( 480, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=315]
atlas = ExtResource( 1 )
region = Rect2( 528, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=316]
atlas = ExtResource( 1 )
region = Rect2( 576, 48, 48, 48 )

[sub_resource type="AtlasTexture" id=289]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=290]
atlas = ExtResource( 5 )
region = Rect2( 109, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=291]
atlas = ExtResource( 5 )
region = Rect2( 218, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=292]
atlas = ExtResource( 5 )
region = Rect2( 327, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=293]
atlas = ExtResource( 5 )
region = Rect2( 436, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=294]
atlas = ExtResource( 5 )
region = Rect2( 545, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=295]
atlas = ExtResource( 5 )
region = Rect2( 654, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=296]
atlas = ExtResource( 5 )
region = Rect2( 763, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=297]
atlas = ExtResource( 5 )
region = Rect2( 872, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=298]
atlas = ExtResource( 5 )
region = Rect2( 981, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=299]
atlas = ExtResource( 5 )
region = Rect2( 1090, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=300]
atlas = ExtResource( 5 )
region = Rect2( 1199, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=317]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=318]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=319]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=320]
atlas = ExtResource( 1 )
region = Rect2( 144, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=321]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=322]
atlas = ExtResource( 1 )
region = Rect2( 240, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=323]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=324]
atlas = ExtResource( 1 )
region = Rect2( 336, 0, 48, 48 )

[sub_resource type="AtlasTexture" id=325]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=326]
atlas = ExtResource( 1 )
region = Rect2( 48, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=327]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=328]
atlas = ExtResource( 1 )
region = Rect2( 144, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=329]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 48, 48 )

[sub_resource type="AtlasTexture" id=330]
atlas = ExtResource( 1 )
region = Rect2( 240, 96, 48, 48 )

[sub_resource type="SpriteFrames" id=284]
resource_local_to_scene = true
animations = [ {
"frames": [ SubResource( 304 ), SubResource( 305 ), SubResource( 306 ), SubResource( 307 ), SubResource( 308 ), SubResource( 309 ), SubResource( 310 ), SubResource( 311 ), SubResource( 312 ), SubResource( 313 ), SubResource( 314 ), SubResource( 315 ), SubResource( 316 ) ],
"loop": false,
"name": "Attack",
"speed": 40.0
}, {
"frames": [ SubResource( 289 ), SubResource( 290 ), SubResource( 291 ), SubResource( 292 ), SubResource( 293 ), SubResource( 294 ), SubResource( 295 ), SubResource( 296 ), SubResource( 297 ), SubResource( 298 ), SubResource( 299 ), SubResource( 300 ) ],
"loop": false,
"name": "Dead",
"speed": 10.0
}, {
"frames": [ SubResource( 317 ), SubResource( 318 ), SubResource( 319 ), SubResource( 320 ), SubResource( 321 ), SubResource( 322 ), SubResource( 323 ), SubResource( 324 ) ],
"loop": true,
"name": "Idle",
"speed": 10.0
}, {
"frames": [ SubResource( 325 ), SubResource( 326 ), SubResource( 327 ), SubResource( 328 ), SubResource( 329 ), SubResource( 330 ) ],
"loop": true,
"name": "Run",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=285]
height = 12.0

[sub_resource type="CircleShape2D" id=286]
radius = 157.204

[sub_resource type="RectangleShape2D" id=287]
extents = Vector2( 10.5625, 11.9063 )

[sub_resource type="Animation" id=288]
resource_name = "Attack"
length = 0.65
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("AnimatedSprite:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ "Attack" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackArea/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ true, false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AnimatedSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12 ]
}

[sub_resource type="Animation" id=302]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EnemyDetector/CollisionShape2D:disabled")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=303]
extents = Vector2( 62, 32.5 )

[sub_resource type="AtlasTexture" id=331]
atlas = ExtResource( 5 )
region = Rect2( 0, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=332]
atlas = ExtResource( 5 )
region = Rect2( 109, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=333]
atlas = ExtResource( 5 )
region = Rect2( 218, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=334]
atlas = ExtResource( 5 )
region = Rect2( 327, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=335]
atlas = ExtResource( 5 )
region = Rect2( 436, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=336]
atlas = ExtResource( 5 )
region = Rect2( 545, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=337]
atlas = ExtResource( 5 )
region = Rect2( 654, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=338]
atlas = ExtResource( 5 )
region = Rect2( 763, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=339]
atlas = ExtResource( 5 )
region = Rect2( 872, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=340]
atlas = ExtResource( 5 )
region = Rect2( 981, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=341]
atlas = ExtResource( 5 )
region = Rect2( 1090, 0, 109, 38 )

[sub_resource type="AtlasTexture" id=342]
atlas = ExtResource( 5 )
region = Rect2( 1199, 0, 109, 38 )

[sub_resource type="SpriteFrames" id=343]
animations = [ {
"frames": [ SubResource( 331 ), SubResource( 332 ), SubResource( 331 ), SubResource( 332 ), SubResource( 331 ), SubResource( 332 ), SubResource( 331 ), SubResource( 332 ), SubResource( 333 ), SubResource( 333 ), SubResource( 334 ), SubResource( 334 ), SubResource( 335 ), SubResource( 335 ), SubResource( 336 ), SubResource( 336 ), SubResource( 337 ), SubResource( 337 ), SubResource( 338 ), SubResource( 338 ), SubResource( 339 ), SubResource( 339 ), SubResource( 340 ), SubResource( 340 ), SubResource( 341 ), SubResource( 341 ), SubResource( 342 ), SubResource( 342 ) ],
"loop": false,
"name": "Explosion",
"speed": 30.0
} ]

[node name="KinematicBody2D" type="KinematicBody2D"]
collision_layer = 1024
collision_mask = 2064
script = ExtResource( 3 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
modulate = Color( 2.3, 3.25, 1.3, 1 )
material = SubResource( 283 )
scale = Vector2( 2, 2 )
frames = SubResource( 284 )
animation = "Attack"
frame = 12
playing = true
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 5, 3.5 )
shape = SubResource( 285 )

[node name="EnemyDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="EnemyDetector"]
shape = SubResource( 286 )

[node name="LifeTimer" type="Timer" parent="."]
one_shot = true

[node name="AttackDetector" type="Area2D" parent="."]
visible = false
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackDetector"]
modulate = Color( 0.58, 1.16, 2.31, 1 )
position = Vector2( -4, 1.09375 )
shape = SubResource( 287 )

[node name="AttackArea" type="Area2D" parent="." groups=["DeadSword"]]
collision_layer = 0
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
modulate = Color( 0.172549, 0.262745, 0.984314, 1 )
position = Vector2( -4, 1 )
shape = SubResource( 287 )
disabled = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Attack = SubResource( 288 )
anims/RESET = SubResource( 302 )

[node name="ExplosionArea" type="Area2D" parent="." groups=["DeadExplosion"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExplosionArea"]
position = Vector2( 0, -5 )
shape = SubResource( 303 )
disabled = true

[node name="ExplosionSprite" type="AnimatedSprite" parent="."]
modulate = Color( 2.3, 3.25, 1.3, 1 )
scale = Vector2( 2, 2 )
frames = SubResource( 343 )
animation = "Explosion"
frame = 10

[connection signal="body_entered" from="EnemyDetector" to="." method="_on_EnemyDetector_body_entered"]
[connection signal="body_exited" from="EnemyDetector" to="." method="_on_EnemyDetector_body_exited"]
[connection signal="timeout" from="LifeTimer" to="." method="_on_LifeTimer_timeout"]
[connection signal="body_entered" from="AttackDetector" to="." method="_on_AttackDetector_body_entered"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
